gitops/apps/barret-cluster/checkmate/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkmate-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkmate-client
  template:
    metadata:
      labels:
        app: checkmate-client
    spec:
      containers:
        - name: client
          image: ghcr.io/bluewave-labs/checkmate-client:v3.2.0
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: config-volume
          configMap:
            name: checkmate-server-nginx-cm
---
apiVersion: v1
kind: Service
metadata:
  name: checkmate-client
spec:
  selector:
    app: checkmate-client
  ports:
    - port: 80
